# ai-programming-hub

./: README.md
001-Mojo-vs-Python/: 01_python_matmul_default.py  02_mojo_matmul_default.mojo  03_mojo_matmul_static_typed.mojo  04_mojo_matmul_advanced.mojo  Makefile  README.md
002-Rust-bindings-to-Python/: Makefile  Python_model.model.vocab  README.md  playground.ipynb  rust.model  rust.vocab  test.py
002-Rust-bindings-to-Python/minbpe/: bpe.py  helpers.py  tokenizer.py
002-Rust-bindings-to-Python/rust-llm/: Cargo.toml  pyproject.toml
002-Rust-bindings-to-Python/rust-llm/src/: bpe.rs  helpers.rs  lib.rs
